feat: Store file size as long instead of String refactor: Add `backity` prefix to custom application properties refactor: Change `let` to `const` in some places